# jaaa

./: .gitignore  Cargo.toml  README.md
migration/: Cargo.toml
migration/src/: lib.rs  m20251117_124322_user_tables.rs
src/: error.rs  main.rs
src/db/: mod.rs  prelude.rs  users.rs
src/jwt/: mod.rs
src/router/: authenticate.rs  health.rs  login.rs  logout.rs  mod.rs  register.rs  whoami.rs
