[package]
name = "jaaa"
version = "0.1.0"
edition = "2024"

[workspace]
members = [".", "migration"]

[dependencies]
# Runtime
tokio = {version = "1.48.0", features = ["full"]}

# HTTP
axum = "0.8.6"

# DB
sea-orm = { version = "2.0.0-rc", features = ["sqlx-postgres", "runtime-tokio-native-tls", "macros" , "with-json", "with-time"] }
migration = { path = "migration" }

# Serialisation
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"

# Crypto
argon2 = { version = "0.5.3", features = ["std"] }
hmac = "0.12.1"
sha2 = "0.10.9"

# Utilities
uuid = { version = "1.18.1", features = ["v4"] }
time = { version = "0.3.44", features = ["serde"] }
hex = "0.4.3"
base64 = "0.22.1"
axum-extra = { version = "0.12.2", features = ["cookie"] }
dotenv = "0.15.0"
